'Create' links on homepage (not prod)

--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -55,6 +55,7 @@ indexing (aka, linking together of pre-prints and final copies).
         <br>published version of a Work
 {% if config.FATCAT_DOMAIN == 'fatcat.wiki' %}
     <td><a href="/release/search">Search</a>
+        <a href="/release/create">Create</a>
     <td><a href="/release/tb24ghkawzgaho5bkim3cbmbnu">Paper</a>
 {% else %}
     <td><a href="/release/search">Search</a>
@@ -111,7 +112,7 @@ indexing (aka, linking together of pre-prints and final copies).
     <td>
     <td><a href="/file/wklqsb5apzfhbbxxc7rgu2yw6m">PDF</a>
 {% else %}
-    <td>
+    <td><a href="/file/create">Create</a>
     <td><a href="/file/wklqsb5apzfhbbxxc7rgu2yw6m">PDF</a> (prod)
         <br><a href="/file/aaaaaaaaaaaaamztaaaaaaaaai">Dummy</a>
         <br><a href="/file/aaaaaaaaaaaaamztaaaaaaaaam">Realistic</a>
