--- a/python/fatcat_web/templates/release_create.html
+++ b/python/fatcat_web/templates/release_create.html
@@ -10,6 +10,10 @@
 {% block edit_form_suffix %}
   <br><br>
   <input class="ui primary submit button" type="submit" value="Create Release!">
+  <p>
+  <i>New entity will be part of the current editgroup, which needs to be
+  submited and approved before the entity will formally be included in the
+  catalog.</i>
 </form>
 </div>
 {% endblock %}
