tweak account page copy

--- a/python/fatcat_web/templates/auth_account.html
+++ b/python/fatcat_web/templates/auth_account.html
@@ -24,10 +24,10 @@
 </div>
 
 <br>
-<p>In the future, you might be able to...
+<p>In the future, you will be able to...
 <ul>
-  <li>Create a bot user
-  <li>Generate an API token
+  <li>Create and manage bot accounts
+  <li>Generate API tokens
 </ul>
 
 {% endblock %}
