reviewable view; improvments to editgroup views

--- a/python/fatcat_web/templates/changelog.html
+++ b/python/fatcat_web/templates/changelog.html
@@ -4,7 +4,7 @@
 <h1 class="ui header">Recent Changes
 <div class="sub header"><code>changelog</code></div></h1>
 
-Limited to the most recent ~50 entries.
+Limited to the most recent entries.
 
 <table class="ui table">
   <thead><tr><th>Changelog<br>Index
