--- a/python/fatcat_web/templates/changelog.html
+++ b/python/fatcat_web/templates/changelog.html
@@ -15,7 +15,7 @@ Limited to the most recent entries.
   <tbody>
   {% for entry in entries %}
   <tr><td><a href="/changelog/{{ entry.index }}">{{ entry.index }}</a>
-      <td>{{ entry.timestamp }}
+      <td>{{ entry.timestamp.strftime("%Y-%m-%d %H:%M:%S") }}
       <td><a href="/editgroup/{{ entry.editgroup_id }}">{{ entry.editgroup_id }}</a>
       <td><a href="/editor/{{ entry.editgroup.editor_id }}">{{ entry.editgroup.editor_id }}</a>
       <td>{% if entry.editgroup.description != None %}{{ entry.editgroup.description }}{% endif %}
