--- a/python/fatcat_web/templates/editor_editgroups.html
+++ b/python/fatcat_web/templates/editor_editgroups.html
@@ -17,11 +17,11 @@
              <th>Description
   <tbody>
   {% for editgroup in editgroups %}
-  <tr>{# <td>{{ editgroup.created }} #}
+  <tr>{# <td>{{ editgroup.created.strftime("%Y-%m-%d %H:%M:%S") }} #}
       <td>{% if editgroup.changelog_index %}
             Merged<br>(<a href="/changelog/{{ editgroup.changelog_index }}">#{{ editgroup.changelog_index }}</a>)
           {% elif editgroup.submitted %}
-            Submitted<br>({{ editgroup.submitted }})
+            Submitted<br>({{ editgroup.submitted.strftime("%Y-%m-%d %H:%M:%S") }})
           {% else %}
             Work in Progress
           {% endif %}
