small UI tweaks for editgroups/account

--- a/python/fatcat_web/templates/auth_account.html
+++ b/python/fatcat_web/templates/auth_account.html
@@ -2,7 +2,7 @@
 {% block body %}
 
 <h1 class="ui header">
-  <i class="user icon"></i>
+  <i class="settings icon"></i>
   Account Settings
 </h1>
 
