--- a/python/fatcat_web/templates/editor_view.html
+++ b/python/fatcat_web/templates/editor_view.html
@@ -7,6 +7,6 @@
 </div>
 </h1>
 
-<p><b><a href="/editor/{{ editor.editor_id }}/editgroups">View editor's editgroups</a></b>
+<p><b><a href="/editor/{{ editor.editor_id }}/editgroups">Edit History</a></b>
 
 {% endblock %}
