--- a/python/fatcat_web/templates/editgroup_reviewable.html
+++ b/python/fatcat_web/templates/editgroup_reviewable.html
@@ -7,15 +7,23 @@
 Limited to the most recent entries.
 
 <table class="ui table">
-  <thead><tr><th>Submitted (UTC)
-             <th>Editgroup
-             <th>Editor
+  <thead><tr><th>Editgroup
              <th>Description
   <tbody>
   {% for editgroup in entries %}
-  <tr><td>{{ editgroup.submitted }}
-      <td><a href="/editgroup/{{ editgroup.editgroup_id }}">{{ editgroup.editgroup_id }}</a>
-      <td><a href="/editor/{{ editgroup.editor_id }}">{{ editgroup.editor_id }}</a>
+  <tr><td>
+        {% if editgroup.editor.is_bot %}
+          <i class="icon bug"></i>
+        {% else %}
+          <i class="icon user"></i>
+        {% endif %}
+        <a href="/editor/{{ editgroup.editor_id }}">{{ editgroup.editor.username }}</a>
+        <br>
+        Submitted: {{ editgroup.submitted.strftime("%Y-%m-%d %H:%M:%S") }}
+        <br>
+        <small><code><a href="/editgroup/{{ editgroup.editgroup_id }}">
+          {{ editgroup.editgroup_id }}
+        </a></code></small>
       <td>{% if editgroup.description != None %}{{ editgroup.description }}{% endif %}
   {% endfor %}
 </table>
